# supernote-system

./: .gitignore  Cargo.toml  README.md  flake.nix  seed.example.toml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: db.rs  grammar.rs  lib.rs  models.rs  routing.rs  template_spec.rs
crates/seed/: Cargo.toml
crates/seed/src/: main.rs
crates/templater/: Cargo.toml
crates/templater/src/: draw.rs  google.rs  main.rs
crates/webapp/: Cargo.toml
crates/webapp/src/: api.rs  claude.rs  dashboard.rs  ingest.rs  main.rs  pdf.rs  research.rs  review.rs  state.rs
crates/webapp/templates/: base.html  dashboard.html  review_detail.html  review_list.html
docs/: onboarding.md
migrations/: 0001_initial.sql
nix/: module.nix  package.nix  renderer.nix
python/: render_note.py
