[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/webapp",
    "crates/templater",
    "crates/agent",
    "crates/seed",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
supernote-core = { path = "crates/core" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive", "env"] }
