[package]
name = "supernote-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "supernote-agent"
path = "src/main.rs"

[dependencies]
supernote-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
clap.workspace = true
image.workspace = true
sha2 = "0.10"
walkdir = "2"
