[package]
name = "supernote-seed"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "supernote-seed"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
toml = "0.9"
