[package]
name = "supernote-templater"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "supernote-templater"
path = "src/main.rs"

[dependencies]
supernote-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
clap.workspace = true
image.workspace = true
imageproc = { version = "0.25", default-features = false }
ab_glyph = "0.2"
yup-oauth2 = "12"
