[package]
name = "supernote-webapp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "supernote-webapp"
path = "src/main.rs"

[dependencies]
supernote-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
clap.workspace = true
axum = { version = "0.8", features = ["multipart"] }
askama = "0.14"
serde_urlencoded = "0.7"
base64 = "0.22"
genpdf = "0.2"
pulldown-cmark = { version = "0.13", default-features = false }
